# bfscraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/bfscraper/: __init__.py  __main__.py
src/bfscraper/cli/: defaults.json  defaults.py  interface.py
src/bfscraper/core/: __init__.py  cache.py
src/bfscraper/scrapers/: __init__.py  async_components.py  site_scraper.py
src/bfscraper/tools/: __init__.py  aux.py  cache.py  config.py  helpers.py  logger.py  scrapers.py
src/scraper_plugin_template/core/: async_tools.py  cache.py
